# principia

./: .gitattributes  .gitignore  .gitmodules  AUTHORS.md  CMakeLists.txt  Doxyfile  LICENSE.md  README.md  THANKS.md  flake.nix  make-textures.py  rebuild-android.sh
.github/: CONTRIBUTING.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml
.github/workflows/: android.yml  build.yml  build_utils.yml  doxygen_deploy.yml  linux.yml  linux_ss.yml  macos.yml  main.yml  web.yml  windows.yml
android/: .gitignore  build.gradle  gradle.properties
android/principia/: build.gradle
build-android/: .gitignore  AndroidManifest.xml  addr2line  build.gradle  build.xml  debug.sh  gradle.properties  keygen_command  lint.xml  proguard-android-principia.txt  project.properties  settings.gradle
build-android-lite/: .gitignore  AndroidManifest.xml  build.xml  fix-sources.sh  keygen_command
build-android-lite/assets/: data-mobile  data-shared
build-android-lite/res/: anim  layout  layout-land  values
build-android/principia/: build.gradle
build-ios/principia/: ColorController.h  ColorController.m  ColorController.xib  CommunityController.h  CommunityController.m  CommunityController.xib  CursorfieldController.h  CursorfieldController.m  CursorfieldController.xib  DisplayController.h  DisplayController.m  DisplayController.xib  EscriptController.h  EscriptController.m  EscriptController.xib  FXEmitterController.h  FXEmitterController.m  FXEmitterController.xib  FreqRangeController.h  FreqRangeController.m  FreqRangeController.xib  FrequencyController.h  FrequencyController.m  FrequencyController.xib  ImportController.h  ImportController.m  ImportController.xib  InfoController.h  InfoController.m  InfoController.xib  LevelPropertiesController.h  LevelPropertiesController.m  LevelPropertiesController.xib  LoginController.h  LoginController.m  LoginController.xib  OpenViewController.h  (+66 more)
build-linux/: .gitignore  Makefile.am  README.md  blacklist.txt  configure.ac  create_png.sh  data-pc  gdb-run-script  go  principia  principia-url-handler.desktop  principia.desktop  uri_associate_gnome.sh  userapp-principia.desktop  valgrind.supp
build-screenshot-linux/: .gitignore  Makefile.am  autogen.sh  configure.ac  data-pc  data-shared  gdb-run-script  go  sdl-makefile-get-sources.sh
build-windows/: .gitignore  Makefile.am  README.md  configure.ac  debug  glewinfo.txt  go  go_bkp  make_release.sh  make_unique.sh  mingw-bundledlls  mrsimb_special_release  principia.manifest  principia.rc  principia_install.nsi  test  test.cpp  visualinfo.txt
build-windows/uriwrapper/: .gitignore  build.sh  main.cc
build-windows/vs/Box2D/: Box2D.vcxproj  Box2D.vcxproj.filters
build-windows/vs/SDL/: SDL.vcxproj  SDL.vcxproj.filters
build-windows/vs/SDL_image/SDL_image/: SDL_image.vcxproj  SDL_image.vcxproj.filters
build-windows/vs/SDL_ttf/: SDL_ttf.vcxproj  SDL_ttf.vcxproj.filters
build-windows/vs/freetype/: freetype.vcxproj  freetype.vcxproj.filters
build-windows/vs/libjpeg/: libjpeg.vcxproj  libjpeg.vcxproj.filters
build-windows/vs/libpng/: libpng.vcxproj  libpng.vcxproj.filters
build-windows/vs/principia/: default_defines.h  principia.sln  principia.vcxproj  principia.vcxproj.filters
build-windows/vs/tms/: tms.vcxproj  tms.vcxproj.filters
build-windows/vs/zlib/: zlib.vcxproj  zlib.vcxproj.filters
changes/: 1.1.2  1.1.3  1.1.5  1.1.7  1.1.7.1  1.2  1.2.1  1.2.3  1.2.4  1.4.0.1  1.5.0.4  1.5.1-small
cmake/: SDL.cmake
data-src/: .gitignore  Untitled.xcf  adamper.blend  banner.blend  border-new.blend  btn_layervis_1.xcf  btn_layervis_2.xcf  btn_layervis_3.xcf  btn_timer.xcf  buttons.xcf  canister.blend  canister_jump.blend  chests.blend  controller.blend  controller.xcf  conveyor.blend  coolvoncool.xcf  cup.blend  cylinder1.blend  damper.blend  dmotor.blend  dragfield.blend  fan.blend  gameman.blend  generator.xcf  giomisc_ao.xcf  gyroscope.blend  hori_line.xcf  humanhead.blend  i1o1.blend  icon-new.xcf  icon_copper.xcf  icon_iron.xcf  ifplug.male.blend  items.xcf  jesterhat.blend  ladder.blend  lmotor.blend  magplug.blend  main_menu.xcf  (+32 more)
doc/: banor  main_page.dox  notes  overview.xcf
lib/: .gitignore  SDL3_polyfills.h
lvledit/: .gitignore  main.cc
lvlinfo/: main.cc
nix/: README.md  default.nix  shell-script.patch
packaging/: Info.plist  build-appimage.sh  bundledlls  glew_macos_fix.patch  index.html  play_community_level.bat  principia-url-handler.desktop  principia.icns  principia.rc  principia_install.nsi  se.principia_web.principia.metainfo.xml  version_info.txt  windows-install-pkgs.sh  windows_portable.sh  windows_release.sh
progress-get/: main.cc
progress-verify/: .gitignore  main.cc
progresstest/: .gitignore
src/: Android.mk  Application.mk  SDL2_rotozoom.c  SDL2_rotozoom.h  SDL_ttf.c  SDL_ttf.h  _unity_chunk.cc  absorber.hh  activator.cc  activator.hh  adventure.cc  adventure.hh  anchor.cc  anchor.hh  angulardamper.hh  ball.cc  basepixel.hh  battery.cc  beam.cc  beam.hh  bomber.cc  boundary.cc  box.cc  button.cc  cable.cc  cable.hh  cavg.cc  ceilgate.cc  chunk.hh  chunk_window.cc  clamp.hh  command.cc  companion.cc  connection.cc  connection.hh  crane.hh  crc.cc  crc.hh  ctrlpass.cc  ctrlservo.cc  (+233 more)
testmaps/: .autosave_crash  .autosave_crash2  .autosave_crashcave  2082.plvl  absorb_group  absorber  absorber_2  adventure  adventure_gravity  adventure_panels  all_objects  angulardamper  apply_gentypes_crash.plvl  bounce  button  cam_marker  connection_segfault  connections  conveyor  crash-level.plvl  crash_reproducable_createfixture.psav  crashcrash.psav  crashhhh.psav  crashreproducable.psav  damper_rotation  dragfield  electromagnet  electromagnet2  electronics  emitter  emitter_errcheck  gravity_manager  gravity_manager_adventure  greenlight.plvl  ifgate  impact_sensor  incrazyboyy-bug.plvl  interactive  jetpack  joint_assert  (+23 more)
tests/: principia_base.py  version_check.py
tools/: .gitignore  insert-objects-to-wiki.py
utils/: Makefile  README.md  prepare_release_builds.sh  set_version.lua  update-sandbox-menu.sh
(+2077 files in other folders)
